force-app/main/default/objects/OW_sla__mdt/OW_sla__mdt.object-meta.xml
<CustomObject>
    <description>Used to capture the SLA for process stages.</description>
    <label>SLA</label>
    <pluralLabel>SLAs</pluralLabel>
</CustomObject>