force-app/main/default/objects/OW_sla__mdt/fields/OW_sla__c.field-meta.xml
<CustomField>
    <fullName>OW_sla__c</fullName>
    <description>The SLA in business days.</description>
    <inlineHelpText>Specified in business days</inlineHelpText>
    <label>SLA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>