force-app/main/default/objects/OW_sla__mdt/fields/OW_status__c.field-meta.xml
<CustomField>
    <fullName>OW_status__c</fullName>
    <description>The status for which this SLA applies.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>