force-app/main/default/objects/OW_sla__mdt/fields/OW_warning_offset__c.field-meta.xml
<CustomField>
    <fullName>OW_warning_offset__c</fullName>
    <description>The number of business days ahead of the SLA that a warning will be given that a risk of breaching SLA could occur.</description>
    <inlineHelpText>Specified in business days</inlineHelpText>
    <label>Warning offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>