force-app/main/default/objects/OW_sla__mdt/listViews/OW_all_slas.listView-meta.xml
<ListView>
    <fullName>OW_all_slas</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OW_object__c</columns>
    <columns>OW_status__c</columns>
    <columns>OW_sla__c</columns>
    <columns>OW_warning_offset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SLAs</label>
    <language>en_US</language>
</ListView>